// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GitConfigToolbar snapshot, form mode 1`] = `
<div
  className="pf-v6-c-toolbar"
  data-ouia-component-id="OUIA-Generated-Toolbar-1"
  data-ouia-component-type="PF6/Toolbar"
  data-ouia-safe={true}
  id="pf-random-id-0"
  style={
    {
      "paddingBottom": 0,
    }
  }
>
  <div
    className="pf-v6-c-toolbar__content"
  >
    <div
      className="pf-v6-c-toolbar__content-section"
    >
      <div
        className="pf-v6-c-toolbar__item pf-m-align-end"
      >
        <button
          aria-label={null}
          className="pf-v6-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-1"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="pf-v6-c-button__icon pf-m-start"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              className="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 640 512"
              width="1em"
            >
              <path
                d="M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z"
              />
            </svg>
          </span>
          <span
            className="pf-v6-c-button__text"
          >
            Switch to Viewer
          </span>
        </button>
        <button
          aria-label={null}
          className="pf-v6-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-2"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="pf-v6-c-button__icon pf-m-start"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              className="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
              />
            </svg>
          </span>
          <span
            className="pf-v6-c-button__text"
          >
            Import Git Configuration
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="pf-v6-c-toolbar__content pf-m-hidden"
    hidden={true}
  >
    <div
      className="pf-v6-c-toolbar__group"
    />
  </div>
</div>
`;

exports[`GitConfigToolbar snapshot, viewer mode 1`] = `
<div
  className="pf-v6-c-toolbar"
  data-ouia-component-id="OUIA-Generated-Toolbar-2"
  data-ouia-component-type="PF6/Toolbar"
  data-ouia-safe={true}
  id="pf-random-id-1"
  style={
    {
      "paddingBottom": 0,
    }
  }
>
  <div
    className="pf-v6-c-toolbar__content"
  >
    <div
      className="pf-v6-c-toolbar__content-section"
    >
      <div
        className="pf-v6-c-toolbar__item pf-m-align-end"
      >
        <button
          aria-label={null}
          className="pf-v6-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-3"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="pf-v6-c-button__icon pf-m-start"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              className="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 640 512"
              width="1em"
            >
              <path
                d="M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z"
              />
            </svg>
          </span>
          <span
            className="pf-v6-c-button__text"
          >
            Switch to Viewer
          </span>
        </button>
        <button
          aria-label={null}
          className="pf-v6-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-4"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="pf-v6-c-button__icon pf-m-start"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              className="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
              />
            </svg>
          </span>
          <span
            className="pf-v6-c-button__text"
          >
            Import Git Configuration
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="pf-v6-c-toolbar__content pf-m-hidden"
    hidden={true}
  >
    <div
      className="pf-v6-c-toolbar__group"
    />
  </div>
</div>
`;
